--- a/ZeroDoc/Source/Project.vcxproj.filters
+++ b/ZeroDoc/Source/Project.vcxproj.filters
@@ -25,6 +25,9 @@
     <ClInclude Include="Replacement.hpp">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Logging.hpp">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -43,6 +46,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="ScriptStub.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Logging.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
