Added warning for undocumented classes. Added extra documentation to force include documentation. More things I don't remember.

--- a/ZeroDoc/Source/Project.vcxproj
+++ b/ZeroDoc/Source/Project.vcxproj
@@ -83,6 +83,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DebugPrint.hpp" />
+    <ClInclude Include="ExtraDocumentation.hpp" />
     <ClInclude Include="Logging.hpp" />
     <ClInclude Include="Parsing.hpp" />
     <ClInclude Include="Precompiled.hpp" />
@@ -91,6 +92,7 @@
     <ClInclude Include="WikiOperations.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ExtraDocumentation.cpp" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Parsing.cpp" />
