--- a/ZeroDoc/Source/Project.vcxproj.filters
+++ b/ZeroDoc/Source/Project.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClInclude Include="Logging.hpp">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="ExtraDocumentation.hpp">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -49,6 +52,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Logging.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="ExtraDocumentation.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
