Updated the crash handler.

--- a/.hgignore
+++ b/.hgignore
@@ -13,3 +13,5 @@ syntax: glob
 
 ZeroDoc/LocalBuildEnvironment.cmd
 BuildMaker/LocalBuildEnvironment.cmd
+ZeroCrashHandler/ZeroCrashHandler/bin/
+ZeroCrashHandler/ZeroCrashHandler/obj/
