--- a/ZeroCrashHandler/ZeroCrashHandler/ZeroCrashHandler.csproj
+++ b/ZeroCrashHandler/ZeroCrashHandler/ZeroCrashHandler.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -87,10 +88,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ZeroEditor_101.ico" />
+    <None Include="Resources\Xz4ma.gif" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Content Include="ZeroEditor_101.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
