Updated the crash handler to have a jsonphp mode and parse things from the command line for the new crash organizer.

--- a/ZeroCrashHandler/ZeroCrashHandler/ZeroCrashHandler.csproj
+++ b/ZeroCrashHandler/ZeroCrashHandler/ZeroCrashHandler.csproj
@@ -37,8 +37,14 @@
     <ApplicationIcon>ZeroEditor_101.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine">
+      <HintPath>.\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>.\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
