--- a/ZeroDoc/curl/lib/vc6libcurl.vcxproj
+++ b/ZeroDoc/curl/lib/vc6libcurl.vcxproj
@@ -22,6 +22,7 @@
     <ProjectName>libcurl</ProjectName>
     <SccProjectName />
     <SccLocalPath />
+    <ProjectGuid>{788820A5-7B25-E883-739A-2795D4CF0B6D}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL Release|Win32'" Label="Configuration">
