--- a/ImageDiffer/ImageDiffer/ImageDiffer.vcxproj
+++ b/ImageDiffer/ImageDiffer/ImageDiffer.vcxproj
@@ -34,16 +34,6 @@
     <Import Project ="$(ZERO_SOURCE)\Build\Win32.$(Configuration).props" Condition="exists('$(ZERO_SOURCE)\Build\Win32.$(Configuration).props')"/>
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(GENERATOR_OUTPUT)\Out\$(Platform)\$(Configuration)\$(ProjectName)\</OutDir>
-    <IntDir>$(GENERATOR_OUTPUT)\Int\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(GENERATOR_OUTPUT)\Out\$(Platform)\$(Configuration)\$(ProjectName)\</OutDir>
-    <IntDir>$(GENERATOR_OUTPUT)\Int\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
@@ -51,13 +41,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(GENERATOR_SOURCE)\SharedUtilities;$(ZERO_SOURCE)\Libraries;$(ZERO_SOURCE)\Libraries\Common;$(ZERO_SOURCE)\Systems;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(GENERATOR_SOURCE)\SharedUtilities;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ProgramDataBaseFileName>$(IntDir)$(ProjectName)_Int.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ZERO_SOURCE)\External\libpng\lib;$(ZERO_SOURCE)\External\GLEW\lib;$(ZERO_SOURCE)\External\zlib\lib;$(ZERO_SOURCE)\External\SDL\lib;$(ZERO_SOURCE)\External\SOIL\lib;$(ZERO_SOURCE)\External\Cg\lib;$(ZERO_SOURCE)\External\freetype\lib;$(ZERO_SOURCE)\External\Curl\lib;$(ZERO_SOURCE)\External\FMOD\lib;$(ZERO_SOURCE)\External\WinHid\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ZeroExtensionLibrariesSource)\External\libpng\lib;$(ZERO_SOURCE)\External\GLEW\lib;$(ZeroExtensionLibrariesSource)\External\zlib\lib;$(ZERO_SOURCE)\External\SOIL\lib;$(ZERO_SOURCE)\External\Cg\lib;$(ZERO_SOURCE)\External\freetype\lib;$(ZERO_SOURCE)\External\Curl\lib;$(ZERO_SOURCE)\External\FMOD\lib;$(ZERO_SOURCE)\External\WinHid\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
       <AdditionalDependencies>libpngd.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -74,7 +64,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(GENERATOR_SOURCE)\SharedUtilities;$(ZERO_SOURCE)\Libraries;$(ZERO_SOURCE)\Libraries\Common;$(ZERO_SOURCE)\Systems;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(GENERATOR_SOURCE)\SharedUtilities;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ProgramDataBaseFileName>$(IntDir)$(ProjectName)_Int.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
@@ -82,7 +72,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(ZERO_SOURCE)\External\libpng\lib;$(ZERO_SOURCE)\External\GLEW\lib;$(ZERO_SOURCE)\External\zlib\lib;$(ZERO_SOURCE)\External\SDL\lib;$(ZERO_SOURCE)\External\SOIL\lib;$(ZERO_SOURCE)\External\Cg\lib;$(ZERO_SOURCE)\External\freetype\lib;$(ZERO_SOURCE)\External\Curl\lib;$(ZERO_SOURCE)\External\FMOD\lib;$(ZERO_SOURCE)\External\WinHid\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ZeroExtensionLibrariesSource)\External\libpng\lib;$(ZERO_SOURCE)\External\GLEW\lib;$(ZeroExtensionLibrariesSource)\External\zlib\lib;$(ZERO_SOURCE)\External\SOIL\lib;$(ZERO_SOURCE)\External\Cg\lib;$(ZERO_SOURCE)\External\freetype\lib;$(ZERO_SOURCE)\External\Curl\lib;$(ZERO_SOURCE)\External\FMOD\lib;$(ZERO_SOURCE)\External\WinHid\lib;%(AdditionalLibraryDirectories);</AdditionalLibraryDirectories>
       <AdditionalDependencies>libpng.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -94,19 +84,19 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="$(ZERO_SOURCE)\Libraries\Math\Math.vcxproj">
+    <ProjectReference Include="$(ZeroStandardLibrariesSource)\Math\Math.vcxproj">
       <Project>{767a1157-b18f-478e-b580-f6f624f9282a}</Project>
     </ProjectReference>
-    <ProjectReference Include="$(ZERO_SOURCE)\Libraries\Platform\Windows\WindowsPlatform.vcxproj">
+    <ProjectReference Include="$(ZeroStandardLibrariesSource)\Platform\Windows\WindowsPlatform.vcxproj">
       <Project>{dbe8e33a-7e70-402c-bcf6-d1efee93fa76}</Project>
     </ProjectReference>
-    <ProjectReference Include="$(ZERO_SOURCE)\Libraries\Common\Common.vcxproj">
+    <ProjectReference Include="$(ZeroStandardLibrariesSource)\Common\Common.vcxproj">
       <Project>{3a62ce69-835e-4d16-86c2-5326625a18bc}</Project>
     </ProjectReference>
-    <ProjectReference Include="$(ZERO_SOURCE)\Libraries\Platform\Platform.vcxproj">
+    <ProjectReference Include="$(ZeroStandardLibrariesSource)\Platform\Platform.vcxproj">
       <Project>{c26bf2c8-d6c3-441a-83aa-9ba656cdf41c}</Project>
     </ProjectReference>
-    <ProjectReference Include="$(ZERO_SOURCE)\Libraries\Support\Support.vcxproj">
+    <ProjectReference Include="$(ZeroExtensionLibrariesSource)\Support\Support.vcxproj">
       <Project>{767a1057-b18f-478e-b480-f6f624f9282a}</Project>
     </ProjectReference>
     <ProjectReference Include="$(GENERATOR_SOURCE)\SharedUtilities\SharedUtilities.vcxproj">
