--- a/ZeroLauncherVersionIdUpdater/ZeroLauncherVersionIdUpdater.csproj
+++ b/ZeroLauncherVersionIdUpdater/ZeroLauncherVersionIdUpdater.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine">
-      <HintPath>..\..\..\..\FixTheBadZero2\ZeroCore\CTR\VisualStudioProjectParser\CommandLine.dll</HintPath>
+      <HintPath>CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
