Added templates to the Add -> New Item for plugin solutions.

--- a/.hgignore
+++ b/.hgignore
@@ -31,3 +31,5 @@ ZeroLauncherVersionIdUpdater/obj/*
 ZeroZilchPlugins/ZeroZilchPlugins/obj/
 ZeroZilchPlugins/packages/
 ZeroZilchPlugins/ZeroZilchPlugins/bin/
+ZeroZilchPlugins/Templates/bin/
+ZeroZilchPlugins/Templates/obj/
