--- a/ZeroZilchPlugins/ZeroZilchPlugins/ZeroZilchPlugins.csproj
+++ b/ZeroZilchPlugins/ZeroZilchPlugins/ZeroZilchPlugins.csproj
@@ -180,6 +180,15 @@
       <ManifestResourceName>VSPackage</ManifestResourceName>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Templates\Templates.csproj">
+      <Project>{1E860332-F4B2-4114-870E-C4CDC1E081BE}</Project>
+      <Name>Templates</Name>
+      <VSIXSubPath>ItemTemplates</VSIXSubPath>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
