--- a/IntersectionGenerator/EnumDeclaration/EnumDeclaration.vcxproj
+++ b/IntersectionGenerator/EnumDeclaration/EnumDeclaration.vcxproj
@@ -33,7 +33,7 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Platform)'=='Win32'">
-    <Import Project ="$(ZERO_SOURCE)\Build\Win32.$(Configuration).props" Condition="exists('$(ZERO_SOURCE)\Build\Win32.$(Configuration).props')"/>
+    <Import Project="$(ZERO_SOURCE)\Build\Win32.$(Configuration).props" Condition="exists('$(ZERO_SOURCE)\Build\Win32.$(Configuration).props')" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -75,6 +75,9 @@
     </ProjectReference>
     <ProjectReference Include="$(ZeroStandardLibrariesSource)\Common\Common.vcxproj">
       <Project>{3a62ce69-835e-4d16-86c2-5326625a18bc}</Project>
+    </ProjectReference>
+    <ProjectReference Include="$(ZeroStandardLibrariesSource)\Platform\Platform.vcxproj">
+      <Project>{c26bf2c8-d6c3-441a-83aa-9ba656cdf41c}</Project>
     </ProjectReference>
     <ProjectReference Include="..\SharedUtilities\SharedUtilities.vcxproj">
       <Project>{9e1559fe-708c-4adf-b302-ee0491c74fbe}</Project>
