--- a/IntersectionGenerator/IntersectionGenerator/IntersectionGenerator.vcxproj
+++ b/IntersectionGenerator/IntersectionGenerator/IntersectionGenerator.vcxproj
@@ -79,6 +79,9 @@
     <ProjectReference Include="$(ZeroStandardLibrariesSource)\Common\Common.vcxproj">
       <Project>{3a62ce69-835e-4d16-86c2-5326625a18bc}</Project>
     </ProjectReference>
+    <ProjectReference Include="$(ZeroStandardLibrariesSource)\Platform\Platform.vcxproj">
+      <Project>{c26bf2c8-d6c3-441a-83aa-9ba656cdf41c}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\SharedUtilities\SharedUtilities.vcxproj">
       <Project>{9e1559fe-708c-4adf-b302-ee0491c74fbe}</Project>
     </ProjectReference>
