--- a/IntersectionGenerator/IntersectionGenerator/IntersectionGenerator.vcxproj
+++ b/IntersectionGenerator/IntersectionGenerator/IntersectionGenerator.vcxproj
@@ -19,6 +19,8 @@
     <RootNamespace>IntersectionGenerator</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <!--Import the environment paths needed to find all our different repositories-->
+  <Import Project="$(SolutionDir)\Paths.props"/>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
