--- a/ZeroDoc/TinyXml/TinyXml.vcxproj
+++ b/ZeroDoc/TinyXml/TinyXml.vcxproj
@@ -18,6 +18,8 @@
     <RootNamespace>TinyXml</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <!--Import the environment paths needed to find all our different repositories-->
+  <Import Project="$(SolutionDir)\Paths.props"/>
   <!--Add Static library with no CharacterSet for all x86 project configurations-->
   <PropertyGroup Condition="'$(Platform)'=='Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
