--- a/IntersectionGenerator/SharedUtilities/SharedUtilities.vcxproj
+++ b/IntersectionGenerator/SharedUtilities/SharedUtilities.vcxproj
@@ -18,6 +18,8 @@
     <RootNamespace>SharedUtilities</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <!--Import the environment paths needed to find all our different repositories-->
+  <Import Project="$(SolutionDir)\Paths.props"/>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
