Added build output to the ignore list.-

--- a/.hgignore
+++ b/.hgignore
@@ -33,3 +33,4 @@ ZeroZilchPlugins/packages/
 ZeroZilchPlugins/ZeroZilchPlugins/bin/
 ZeroZilchPlugins/Templates/bin/
 ZeroZilchPlugins/Templates/obj/
+BuildOutput
