--- a/.hgignore
+++ b/.hgignore
@@ -33,3 +33,7 @@ ZeroZilchPlugins/packages/
 ZeroZilchPlugins/ZeroZilchPlugins/bin/
 ZeroZilchPlugins/Templates/bin/
 ZeroZilchPlugins/Templates/obj/
+ZeroDoc/curl/src/DLL-Debug/
+ZeroDoc/curl/lib/DLL-Debug/
+PatchZeroBadUrls/PatchZeroBadUrls/obj/
+PatchZeroBadUrls/PatchZeroBadUrls/bin/
